# dcal

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/dcal-cli/: Cargo.toml
crates/dcal-cli/src/: error.rs  main.rs  output.rs  resolve.rs
crates/dcal-cli/src/commands/: checkin.rs  info.rs  init.rs  journal.rs  list.rs  mod.rs  new.rs  onboard.rs  pause.rs  phase.rs  resume.rs  search.rs  sessions.rs  snapshot.rs  sync.rs
crates/dcal-cli/tests/: integration.rs
crates/dcal-config/: Cargo.toml
crates/dcal-config/src/: credentials.rs  init.rs  lib.rs  loader.rs  model.rs
crates/dcal-core/: Cargo.toml
crates/dcal-core/src/: brief.rs  id.rs  lib.rs  lifecycle.rs  lock.rs  logging.rs  paths.rs  project.rs  project_files.rs  registry.rs
crates/dcal-generate/: Cargo.toml
crates/dcal-generate/src/: client.rs  generate.rs  intake.rs  lib.rs  resolve.rs  scaffold.rs  validate.rs
crates/dcal-hooks/: Cargo.toml
crates/dcal-hooks/src/: cc_projects.rs  checkin.rs  install.rs  lib.rs  summarizer.rs  sync.rs  transcript.rs
crates/dcal-onboard/: Cargo.toml
crates/dcal-onboard/src/: importer.rs  lib.rs  reader.rs
