[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"

# Async & networking
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Internal crates
dcal-core = { path = "crates/dcal-core" }
dcal-config = { path = "crates/dcal-config" }
dcal-generate = { path = "crates/dcal-generate" }
dcal-hooks = { path = "crates/dcal-hooks" }
dcal-onboard = { path = "crates/dcal-onboard" }
