[package]
name = "dcal"
version = "0.2.0"
edition = "2021"
authors = ["George Kanellopoulos <george@gkanellopoulos.com>"]
description = "Project lifecycle management for Claude Code"
license = "MIT"
repository = "https://github.com/gkanellopoulos/dcal"
homepage = "https://github.com/gkanellopoulos/dcal"
readme = "../../README.md"
keywords = ["cli", "claude", "project-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dcal"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
dcal-core = { workspace = true }
dcal-config = { workspace = true }
dcal-generate = { workspace = true }
dcal-hooks = { workspace = true }
dcal-onboard = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
