[package]
name = "dcal-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
dialoguer = { workspace = true }
dcal-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
