[package]
name = "dcal-config"
version.workspace = true
edition.workspace = true
publish = false
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
dialoguer = { workspace = true }
dcal-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
