[package]
name = "dcal-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
