[package]
name = "dcal-hooks"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dcal-core = { workspace = true }
dcal-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
