[package]
name = "dcal-hooks"
version.workspace = true
edition.workspace = true
publish = false
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dcal-core = { workspace = true }
dcal-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
